--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
+# Build outputs
+*.xpi
+*.zip
+build/
+dist/
+web-ext-artifacts/
+
+# Dependencies
+node_modules/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.bak
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Testing
+coverage/
+*.log
+
+# Local development
 Archive.zip
+.aider*
