--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,10 @@
   "name": "Page to Markdown",
   "version": "2.1",
   "description": "Saves the current page as markdown",
-
   "permissions": [
     "activeTab",
     "downloads"
   ],
-
   "browser_action": {
     "default_icon": {
       "48": "icons/icon48.png",
@@ -16,23 +14,26 @@
     },
     "default_title": "Save as Markdown"
   },
-
   "content_security_policy": "script-src 'self'; object-src 'self'",
-
   "background": {
-    "scripts": ["background.js"],
+    "scripts": [
+      "background.js"
+    ],
     "persistent": false
   },
-
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-    "js": [
-      "lib/readability.js",
-      "lib/turndown.js",
-      "content.js"
-    ]
-  }],
-
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "lib/readability.js",
+        "lib/turndown.js",
+        "lib/turndown-plugin-gfm.js",
+        "content.js"
+      ]
+    }
+  ],
   "icons": {
     "48": "icons/icon48.png",
     "96": "icons/icon96.png",
