--- a/manifest.json
+++ b/manifest.json
@@ -38,5 +38,11 @@
     "48": "icons/icon48.png",
     "96": "icons/icon96.png",
     "128": "icons/icon.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "pagetomd@dabg.uk",
+      "data_collection_permissions": {}
+    }
   }
 }
