fix(manifest): add empty required data_collection_permissions entry

--- a/manifest.json
+++ b/manifest.json
@@ -42,7 +42,9 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "pagetomd@dabg.uk",
-      "data_collection_permissions": {}
+      "data_collection_permissions": {
+        "required": []
+      }
     }
   }
 }
