chore(manifest): wrap gecko id in braces

--- a/manifest.json
+++ b/manifest.json
@@ -41,7 +41,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "3ba5f422-9edc-46c9-8e29-b689840a4a8f"
+      "id": "{3ba5f422-9edc-46c9-8e29-b689840a4a8f}"
     }
   }
 }
