feat(build): migrate to modern build pipeline and refactor content/background
- bump extension version to 3.0 in manifest
- replace handwritten libs with bundled dist builds (use dist/content.js and dist/background.js)
- remove legacy source files: background.js, content.js, lib/readability.js, lib/turndown.js, lib/turndown-plugin-gfm.js
- add new source files under src/:
  - src/content.js: advanced markdown converter using defuddle, turndown and gfm plugin with enhanced code block and heading handling
  - src/background.js: rewritten background script using webextension-polyfill and Promise-based message handling
- add build tooling and packaging:
  - package.json with build/dev scripts, dependencies and vite
  - vite.content.config.js and vite.background.config.js to output iife bundles to dist
  - build_zip.sh to package pagetomd-${version}.zip
  - pnpm-workspace.yaml
- add roadmapped implementation notes: ROADMAP.md
- update .gitignore to exclude obsidian-clipper-src/
- add pnpm workspace files and move content script and background to bundler workflow
- preserve Turndown custom rules: improved code block detection, heading/link cleanup, inline code handling, and fallback strategies

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Page to Markdown",
-  "version": "2.3",
+  "version": "3.0",
   "description": "Saves the current page as markdown",
   "permissions": [
     "activeTab",
@@ -17,7 +17,7 @@
   "content_security_policy": "script-src 'self'; object-src 'self'",
   "background": {
     "scripts": [
-      "background.js"
+      "dist/background.js"
     ],
     "persistent": false
   },
@@ -27,10 +27,7 @@
         "<all_urls>"
       ],
       "js": [
-        "lib/readability.js",
-        "lib/turndown.js",
-        "lib/turndown-plugin-gfm.js",
-        "content.js"
+        "dist/content.js"
       ]
     }
   ],
