--- a/manifest.json
+++ b/manifest.json
@@ -38,7 +38,12 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "{3ba5f422-9edc-46c9-8e29-b689840a4a8f}"
+      "id": "{3ba5f422-9edc-46c9-8e29-b689840a4a8f}",
+      "data_collection_permissions": {
+        "required": [
+          "none"
+        ]
+      }
     }
   }
 }
